# solarpowerlog

./: .gitignore  .travis.yml  AUTHORS  BUILDING  COPYING  COPYRIGHT  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  PLAN  README  WINDOWS.txt  aclocal.m4  bootstrap.sh  configure  configure.ac  configure.in  doxygen.css  run_autotools.sh  solarpowerlog.1  solarpowerlog.conf
debian/: README.Debian  changelog  clean  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  solarpowerlog.1  solarpowerlog.default  solarpowerlog.default.ex  solarpowerlog.doc-base.EX  solarpowerlog.examples  solarpowerlog.init  solarpowerlog.install  solarpowerlog.lintian-overrides  solarpowerlog.postrm  solarpowerlog.substvars  watch  watch.ex
debian/patches/: 0006-Fix-build-with-Boost-1.67.patch  01-boost-1.54.patch  02-dont-ovewrite-cppflags.patch  03-gcc5-778125.patch  04-libconfig1.5.patch  05-gcc7.patch  boost-1.54.patch  series  (+1 more)
example_confs/: htmlwriter.conf  solarpowerlog.conf  solarpowerlog_complex.conf  solarpowerlog_danfoss.conf  solarpowerlog_serial.conf  solarpowerlog_shared.conf  solarpowerlog_shared_sim.conf  solarpowerlog_simulator.conf
extlibs/: README
extlibs/dbixx/: COPYING  Makefile.am  configure.in  dbixx.h  result.cpp  row.cpp  session.cpp  test.cpp
m4/: boost.m4
src/: InverterBase.cpp  InverterBase.h  Makefile.am  Makefile.in  Registry.cpp  Registry.h  config.h.in  daemon.cpp  daemon.h  porting.h  solarpowerlog.cpp
src/Connections/: CAsyncCommand.cpp  CAsyncCommand.h  CConnectDummy.cpp  CConnectDummy.h  CConnectSerialAsio.cpp  CConnectSerialAsio.h  CConnectTCP.cpp  CConnectTCP.h  CConnectTCPAsio.cpp  CConnectTCPAsio.h  CSharedConnection.cpp  CSharedConnection.h  CSharedConnectionMaster.cpp  CSharedConnectionMaster.h  CSharedConnectionSlave.cpp  CSharedConnectionSlave.h  ConnectionTCP.cpp  ConnectionTCP.h
src/Connections/factories/: IConnectFactory.cpp  IConnectFactory.h
src/Connections/interfaces/: IConnect.cpp  IConnect.h
src/Connections/sharedconnection/: CSharedConnection.cpp  CSharedConnection.h  CSharedConnectionMaster.cpp  CSharedConnectionMaster.h  CSharedConnectionSlave.cpp  CSharedConnectionSlave.h
src/DataFilters/: CCSVOutputFilter.cpp  CCSVOutputFilter.h  CDumpOutputFilter.cpp  CDumpOutputFilter.h  CHTMLWriter.cpp  CHTMLWriter.h
src/DataFilters/DBWriter/: CDBWHSpecialTokens.cpp  CDBWHSpecialTokens.h  CDBWriterFilter.cpp  CDBWriterFilter.h  CDBWriterHelper.cpp  CDBWriterHelper.h  CdbInfo.cpp  CdbInfo.h
src/DataFilters/HTMLWriter/: CHTMLWriter.cpp  CHTMLWriter.h
src/DataFilters/HTMLWriter/formatter/: CFormaterWebRootStrip.cpp  CFormaterWebRootStrip.h  CFormatterSearchCSVEntry.cpp  CFormatterSearchCSVEntry.h  IFormater.cpp  IFormater.h
src/DataFilters/interfaces/: IDataFilter.cpp  IDataFilter.h
src/DataFilters/interfaces/factories/: IDataFilterFactory.cpp  IDataFilterFactory.h
src/Inverters/: BasicCommands.h  Capabilites.h
src/Inverters/Danfoss/: CInverterDanfoss.cpp  CInverterDanfoss.h  CInverterFactoryDanfoss.cpp  CInverterFactoryDanfoss.h
src/Inverters/Danfoss/DanfossCommand/: CDanfossCommand.cpp  CDanfossCommand.h
src/Inverters/DummyInverter/: CInverterDummy.cpp  CInverterDummy.h  CInverterFactoryDummy.cpp  CInverterFactoryDummy.h
src/Inverters/SputnikEngineering/: CInverterFactorySputnik.cpp  CInverterFactorySputnik.h  CInverterSputnikSSeries.cpp  CInverterSputnikSSeries.h  CInverterSputnikSSeriesSimulator.cpp  CInverterSputnikSSeriesSimulator.h  CSputnikCommand.cpp  CSputnikCommand.h  CSputnikCommandSoftwareVersion.cpp  ISputnikCommand.h
src/Inverters/SputnikEngineering/SputnikCommand/: CSputnikCommand.cpp  CSputnikCommand.h  CSputnikCommandSYS.cpp  CSputnikCommandSYS.h  CSputnikCommandSoftwareVersion.cpp  CSputnikCommandSoftwareVersion.h  CSputnikCommandTYP.cpp  CSputnikCommandTYP.h  ISputnikCommand.cpp  ISputnikCommand.h
src/Inverters/SputnikEngineering/SputnikCommand/BackoffStrategies/: CSputnikCmdBOAlways.cpp  CSputnikCmdBOAlways.h  CSputnikCmdBOIfSupported.cpp  CSputnikCmdBOIfSupported.h  CSputnikCmdBOOnce.cpp  CSputnikCmdBOOnce.h  CSputnikCmdBOTimed.cpp  CSputnikCmdBOTimed.h  ISputnikCommandBackoffStrategy.cpp  ISputnikCommandBackoffStrategy.h
src/Inverters/factories/: IInverterFactory.cpp  IInverterFactory.h  InverterFactoryFactory.cpp  InverterFactoryFactory.h
src/Inverters/interfaces/: CNestedCapaIterator.cpp  CNestedCapaIterator.h  ICapaIterator.cpp  ICapaIterator.h  InverterBase.cpp  InverterBase.h
src/__obsolete__/: CConnectTCP.cpp  CConnectTCP.h  README.txt
src/configuration/: CConfigCentral.cpp  CConfigCentral.h  CConfigHelper.cpp  CConfigHelper.h  ILogger.cpp  ILogger.h  Registry.cpp  Registry.h
src/configuration/ConfigCentral/: CConfigCentral.cpp  CConfigCentral.h  CConfigCentralEntry.cpp  CConfigCentralEntry.h  CConfigCentralEntryRangeCheck.cpp  CConfigCentralEntryRangeCheck.h  CConfigCentralEntryText.cpp  CConfigCentralEntryText.h  ConfigCentralHelpers.cpp  ConfigCentralHelpers.h  IConfigCentralEntry.cpp  IConfigCentralEntry.h
src/ctemplate/: README  ctemplate.c
src/interfaces/: CCapability.cpp  CCapability.h  CDebugHelper.cpp  CDebugHelper.h  CMutexHelper.cpp  CMutexHelper.h  CTimedWork.cpp  CTimedWork.h  CWorkScheduler.cpp  CWorkScheduler.h  IConnect.cpp  IConnect.h  IConnectFactory.cpp  IConnectFactory.h  InverterBase.cpp  InverterBase.h  InverterFactoryFactory.cpp  InverterFactoryFactory.h
src/interfaces/factories/: IConnectFactory.cpp  IConnectFactory.h  IInverterFactory.cpp  IInverterFactory.h  InverterFactoryFactory.cpp
src/patterns/: CValue.h  ICapability.cpp  ICapability.h  ICommand.cpp  ICommand.h  ICommandTarget.cpp  ICommandTarget.h  IObserverObserver.cpp  IObserverObserver.h  IObserverSubject.cpp  IObserverSubject.h  IValue.cpp  IValue.h
src/scripts/: GenConstHash.pl
tools/: README.txt  eclipse_codestyle.xml  make-slp-dist  solarpowerlog.default  solarpowerlog.init  solarpowerlog.logrotate
(+54 files in other folders)
